--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,379 @@
 /* место для вашего кода */
+body {
+    width: 1100px;
+}
+
+a {
+    text-underline-offset: 4px;
+}
+
+.header {
+    display: grid;
+    grid-template-columns: 1fr min-content 1fr;
+    align-items: center;
+    width: 1100px;
+    padding: 93px 24px;
+}
+
+.header__menu {
+    display: flex;
+    justify-content: center;
+    padding-right: 18px;
+    padding-top: 0%;
+    padding-left: 0%;
+}
+
+.header__links-list {
+    display: flex;
+    gap: 33px;
+    list-style: circle;
+    font-family: "Raleway", sans-serif;
+    font-weight: normal;
+    font-size: 18px;
+}
+
+.header__links-list-item {
+    text-transform: lowercase;
+}
+
+.header__links-list-item_no-bullit {
+    list-style: none;
+}
+
+.header__link_active {
+    text-decoration: none;
+}
+
+.header__logo {
+    display: block;
+    width: 137px;
+    height: 105px;
+}
+
+.header__logo-image {
+    width: 100%;
+}
+
+.address {
+    display: flex;
+    flex-direction: column;
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    line-height: 24px;
+}
+
+.header__address {
+    max-width: 240px;
+    justify-self: end;
+    padding-right: 25px;
+    margin-right: 26px;
+}
+
+.cover {
+    position: relative;
+    background-image: url(../images/cover.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    color: #ffffff;
+}
+
+.cover__title {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 148px 20px 106px 40px;
+    font-family: "Raleway", sans-serif;
+    font-style: normal;
+    font-size: 100px;
+    font-weight: bold;
+    line-height: 115%;
+    text-transform: uppercase;
+}
+
+.aligned-text {
+    align-self: flex-start;
+    padding-top: 23px;
+    padding-left: 10px;
+    z-index: 1;
+}
+
+.aligned-text__center {
+    display: block;
+    align-self: center;
+    text-align: center;
+    padding-top: 20px;
+    padding-left: 11px;
+    z-index: 1;
+}
+
+.aligned-text__right {
+    align-self: flex-end;
+    text-align: right;
+    padding-top: 19px;
+    padding-right: 1px;
+    z-index: 1;
+}
+
+.overlay {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 0.6);
+}
+
+.cover__description {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-evenly;
+    padding: 0px 50px 50px 45px;
+    gap: 105px;
+    text-transform: uppercase;
+    color: #ffffff;
+}
+
+.cover__description-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: "Raleway", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 22px;
+    line-height: 28px;
+    word-spacing: 18px;
+    padding-left: 3px;
+    z-index: 1;
+}
+
+.letter-spacing-extended {
+    letter-spacing: 0.3em;
+}
+
+.bet-button {
+    width: 256px;
+    height: 51px;
+    font-family: "Raleway", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 22px;
+    line-height: 25px;
+    background-color: transparent;
+    border: 1px solid white;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    z-index: 1;
+}
+
+.lots__heading {
+    padding-top: 180px;
+    padding-left: 64px;
+    padding-bottom: 27px;
+    font-family: "Raleway", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 47px;
+    text-transform: uppercase;
+    color: #000000;
+}
+
+.lots__card-list {
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    flex-wrap: wrap;
+}
+
+.lots__card-list-item {
+    list-style: none;
+    width: 334px;
+    min-height: 596px;
+}
+
+.card-link {
+    height: 100%;
+    text-decoration: none;
+}
+
+.card {
+    height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    background-position: center;
+    background-repeat: no-repeat;
+    flex-wrap: wrap;
+    background-size: cover;
+    justify-content: space-between;
+    align-content: center;
+}
+
+.card_type_film {
+    background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+    background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+    background-image: url(../images/card-lot-03.jpg);
+}
+
+.card__title {
+    font-family: "Raleway", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 26px;
+    text-decoration-line: underline;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    padding-top: 48px;
+    padding-left: 40px;
+    padding-right: 40px;
+    z-index: 1;
+}
+
+.card__text {
+    font-family: "Raleway", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 24px;
+    color: #FFFFFF;
+    padding-bottom: 48px;
+    padding-left: 40px;
+    padding-right: 40px;
+    z-index: 1;
+}
+
+.lots__look-more-link {
+    display: block;
+    margin-top: 30px;
+    margin-bottom: 153px;
+    margin-left: 64px;
+    font-family: "Raleway", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 23px;
+    color: #000000;
+    text-transform: lowercase;
+}   
+
+.about {
+    display: grid;
+    grid-template-columns: 334px 1fr;
+    gap: 25px;
+    margin: 35px 24px 0px;
+}
+
+
+.about__logo {
+    justify-self: center;
+    border-radius: 50%;
+    width: 240px;
+    height: 240px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #000000;
+}
+
+.about__logo-image {
+    width: 148px;
+    height: 114px;
+}
+
+.about__column {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.about__title {
+    padding-top: 101px;
+    width: 291px;
+    font-family: "Raleway", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 47px;
+    text-transform: uppercase;
+    color: #000000;
+}
+
+.about__text {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    font-family: "Raleway", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 24px;
+    color: #000000;
+}
+
+.about__text-upper {
+    margin-top: 77px;
+    margin-right: 30px;
+    width: 688px;
+}
+.about__text-lower {
+    width: 693px;
+}
+
+.footer {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    padding-top: 180px;
+    padding-bottom: 82px;
+    align-items: flex-start;
+}
+
+.footer__address{
+    margin-left: 50px;
+    max-width: 275px;
+}
+
+.footer__menu {
+    padding-right: 85px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer__menu-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style: none;
+    font-family: "Raleway", sans-serif;
+    font-weight: normal;
+    font-size: 18px;
+    text-transform: lowercase;
+}
+
+.footer__menu-link_active {
+    text-decoration: none;
+}
+
+.footer__social-list {
+    display: flex;
+    justify-content: center;
+    gap: 48px;
+}
+
+.footer__social-list-item {
+    list-style: none;
+}
+
+.footer__social-icon {
+    box-sizing: border-box;
+    width: 48px;
+    height: 48px;
+}
