--- a/styles/style.css
+++ b/styles/style.css
@@ -72,6 +72,7 @@ a {
 
 .cover {
     position: relative;
+    max-width: 1100px;
     background-image: url(../images/cover.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -324,6 +325,7 @@ a {
     margin-right: 30px;
     width: 688px;
 }
+
 .about__text-lower {
     width: 693px;
 }
